Revision history for PDF-Native

{{$NEXT}}

0.1.2  2024-07-19T09:33:05+12:00
   - Add COSContent for content stream parsing and serialization

0.1.1  2024-07-12T08:26:39+12:00
   - Remove disused PDF::Native::Parser"

0.1.0  2024-07-12T07:56:01+12:00
   - Introduce PDF::Native::COS as a set of objects with a parser and
     serialization methods.

0.0.5  2024-05-06T07:31:25+12:00
    - Fix printing of wide integers in pdf_write_int()

0.0.4  2023-10-23T09:25:09+13:00
    - Also widen predictor rows parameter; from uint_16 to size_t.

0.0.3  2023-10-22T08:47:19+13:00
    - Writer integers as 64bit / 18 digits (was 32 bit / 8 digits)

0.0.2  2022-06-06T09:11:51+12:00
    - Fix writing of Name Objects.
    - Add subroutines unpack-xref-stream() and pack-xref-stream() to
      PDF::Native::Buf

0.0.1  2022-06-02T10:21:42+12:00
    - Initial version