@@ -1,6 +1,7 @@
 Revision history for PDF-Native
 
 {{$NEXT}}
+   - Add content operator validation
 
 0.1.2  2024-07-19T09:33:05+12:00
    - Add COSContent for content stream parsing and serialization
